<resources>
    <string name="app_name">Astrosat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="Astrosat_Visibility_Calculator">Visibility Calculator</string>
    <string name="TargetName">Target Name</string>
    <string name="RAJ2000">RA[J2000]</string>
    <string name="DECJ2000">DEC [J2000]</string>
    <string name="AstrosatVisibiltyConfiguration">Configuration</string>
    <string name="StartTime">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="SecInterval">Sec Interval</string>
    <string name="PrintORB">Print ORB</string>
    <string name="reportprogressTitle">Report Generation</string>
    <string name="reportProgressText">Wait Report Writting to Pdf</string>
    <string name="SaveSettings">Save Settings</string>
    <string name="Generate">Generate</string>
    <string name="Reset">Reset</string>
    <string name="Date">01/01/2018</string>
    <string name="Time">12 : 00 : 00</string>
    <string name="settings">Settings</string>
    <string name="Astrosat_Visibility_Reports">Visibility Reports</string>
    <string name="ComputationalInterval">Computational Interval</string>
    <string name="sec">Sec</string>
    <string name="PFRO">Point Full Resolution Orbit</string>
    <string name="sec60">60</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>

</resources>
