<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_calc_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimens_10dp"
    android:weightSum="3">

    <EditText
        android:id="@+id/et_targetName_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_1dp"
        android:layout_weight="0.9"
        android:background="@drawable/bg_et_box"
        android:gravity="center"
        android:hint="@string/TargetName"
        android:inputType="text"
        android:padding="@dimen/dimens_5dp"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:textColorHint="#636363"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_RA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_1dp"
        android:layout_marginEnd="@dimen/dimens_1dp"
        android:layout_weight="0.9"
        android:background="@drawable/bg_et_box"
        android:gravity="center"
        android:hint="@string/RAJ2000"
        android:inputType="text"
        android:padding="@dimen/dimens_5dp"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:textColorHint="#636363"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_DEC"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_1dp"
        android:layout_weight="0.9"
        android:background="@drawable/bg_et_box"
        android:gravity="center"
        android:hint="@string/DECJ2000"
        android:inputType="text"
        android:padding="@dimen/dimens_5dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="#636363"
        android:textSize="15sp"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:padding="5dp"
        android:background="@drawable/ic_close"
        android:onClick="onDelete"/>


</LinearLayout>

